--- a/src/app/bank/bank.component.html
+++ b/src/app/bank/bank.component.html
@@ -12,32 +12,22 @@
     <div class="d-flex">
         <div class="d-inline-block" ngbDropdown #myDrop="ngbDropdown">
             <button class="btn btn-outline-primary mr-2" id="dropdownManual" ngbDropdownAnchor
-                (focus)="myDrop.open()">Bangalore</button>
+                (focus)="myDrop.open()">{{ city }}</button>
             <div ngbDropdownMenu aria-labelledby="dropdownManual">
-                <button ngbDropdownItem>Bangalore</button>
-                <button ngbDropdownItem>Mumbai</button>
-                <button ngbDropdownItem>Delhi</button>
-                <button ngbDropdownItem>Pune</button>
-                <button ngbDropdownItem>Chennai</button>
-                <button ngbDropdownItem>Kolkata</button>
+                <button ngbDropdownItem (click)="selectCity('All')">All</button>
+                <button ngbDropdownItem *ngFor="let city of cities" (click)="selectCity(city)" ngbDropdownItem>{{ city }}</button>
             </div>
         </div>
         <input class="form-control mr-2" type="text" [(ngModel)]="searchText" (ngModelChange)="searchTextUpdate$.next($event)" (keyup.enter)="doSearch()">
         <div class="dropdown btn-group dropup mr-1 mb-1" ngbDropdown>
-            <div class="btn btn-danger btn-raised">All</div>
+            <div class="btn btn-danger btn-raised">{{searchFilter}}</div>
             <button type="button" class="btn btn-danger btn-raised dropdown-toggle" ngbDropdownToggle
                 aria-haspopup="true" aria-expanded="false">
                 <span class="sr-only">Toggle Dropdown</span>
             </button>
             <div ngbDropdownMenu class="dropdown-menu" role="menu">
-                <!-- <a *ngFor="let attr of attributes" class="dropdown-item" (click)="searchAttribute = attr; doSearch()">{{attr}}</a>  -->
-                <button ngbDropdownItem>IFSC</button>
-                <button ngbDropdownItem>Branch</button>
-                <button ngbDropdownItem>Address</button>
-                <button ngbDropdownItem>City</button>
-                <button ngbDropdownItem>District</button>
-                <button ngbDropdownItem>State</button>
-                <button ngbDropdownItem>Bank ID</button>
+                <button ngbDropdownItem (click)="applyFilter('Autocomplete')">Autocomplete</button>
+                <button ngbDropdownItem (click)="applyFilter('Branch')">Branch</button>                
             </div>
         </div>
     </div>
