Change 'Autocomplete' to 'All'

--- a/src/app/bank/bank.component.html
+++ b/src/app/bank/bank.component.html
@@ -27,7 +27,7 @@
                 <span class="sr-only">Toggle Dropdown</span>
             </button>
             <div ngbDropdownMenu class="dropdown-menu" role="menu">
-                <button ngbDropdownItem (click)="applyFilter('Autocomplete')">Autocomplete</button>
+                <button ngbDropdownItem (click)="applyFilter('All')">All</button>
                 <button ngbDropdownItem (click)="applyFilter('Branch')">Branch</button>                
             </div>
         </div>
